# slackbot

./: CMakeLists.txt  README.md  address.h  auto_alloc.h  console.cpp  console.h  entity.h  entity_list.cpp  entity_list.h  main.cpp  process.cpp  process.h  setting.cpp  setting.h  settings.h  util.h  visuals.cpp  visuals.h
